talpid-types/src/net/snapshots/talpid_types__net__proxy__test__shadowsocks_ciphers-2.snap
---
source: talpid-types/src/net/proxy.rs
expression: "ShadowsocksCipher::enumerate()"
---
[
    ShadowsocksCipher(
        "none",
    ),
    ShadowsocksCipher(
        "table",
    ),
    ShadowsocksCipher(
        "rc4-md5",
    ),
    ShadowsocksCipher(
        "aes-128-ctr",
    ),
    ShadowsocksCipher(
        "aes-192-ctr",
    ),
    ShadowsocksCipher(
        "aes-256-ctr",
    ),
    ShadowsocksCipher(
        "aes-128-cfb",
    ),
    ShadowsocksCipher(
        "aes-128-cfb1",
    ),
    ShadowsocksCipher(
        "aes-128-cfb8",
    ),
    ShadowsocksCipher(
        "aes-192-cfb",
    ),
    ShadowsocksCipher(
        "aes-192-cfb1",
    ),
    ShadowsocksCipher(
        "aes-192-cfb8",
    ),
    ShadowsocksCipher(
        "aes-256-cfb",
    ),
    ShadowsocksCipher(
        "aes-256-cfb1",
    ),
    ShadowsocksCipher(
        "aes-256-cfb8",
    ),
    ShadowsocksCipher(
        "aes-128-ofb",
    ),
    ShadowsocksCipher(
        "aes-192-ofb",
    ),
    ShadowsocksCipher(
        "aes-256-ofb",
    ),
    ShadowsocksCipher(
        "camellia-128-ctr",
    ),
    ShadowsocksCipher(
        "camellia-192-ctr",
    ),
    ShadowsocksCipher(
        "camellia-256-ctr",
    ),
    ShadowsocksCipher(
        "camellia-128-cfb",
    ),
    ShadowsocksCipher(
        "camellia-128-cfb1",
    ),
    ShadowsocksCipher(
        "camellia-128-cfb8",
    ),
    ShadowsocksCipher(
        "camellia-192-cfb",
    ),
    ShadowsocksCipher(
        "camellia-192-cfb1",
    ),
    ShadowsocksCipher(
        "camellia-192-cfb8",
    ),
    ShadowsocksCipher(
        "camellia-256-cfb",
    ),
    ShadowsocksCipher(
        "camellia-256-cfb1",
    ),
    ShadowsocksCipher(
        "camellia-256-cfb8",
    ),
    ShadowsocksCipher(
        "camellia-128-ofb",
    ),
    ShadowsocksCipher(
        "camellia-192-ofb",
    ),
    ShadowsocksCipher(
        "camellia-256-ofb",
    ),
    ShadowsocksCipher(
        "rc4",
    ),
    ShadowsocksCipher(
        "chacha20-ietf",
    ),
    ShadowsocksCipher(
        "aes-128-gcm",
    ),
    ShadowsocksCipher(
        "aes-256-gcm",
    ),
    ShadowsocksCipher(
        "chacha20-ietf-poly1305",
    ),
]
